Fix header alignment

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -20,7 +20,7 @@ header{
       box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.13);
 
       @media (min-width: $screen-md-min) {
-        top: -18px;
+        top: -7.5px;
         margin:0;
         height: 90px;
         left:15px;
