--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.13); }
     @media (min-width: 900px) {
       header .brand img {
-        top: -18px;
+        top: -7.5px;
         margin: 0;
         height: 90px;
         left: 15px; } }
